Testing removal of parallax on mobile screens by media query to fix background image zoom

--- a/public/stylesheets/shared.css
+++ b/public/stylesheets/shared.css
@@ -137,11 +137,12 @@ main p {
 .hero-section .hero-section__image {
   grid-row: row-1-start/row-2-end;
   grid-column: col-start 1/col-start 13;
-  background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url("../images/hero-image-1.jpg") center center no-repeat fixed;
+  background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url("../images/hero-image-1.jpg") center center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background-attachment: fixed;
   height: 100%;
   display: flex;
   flex-direction: column;
